--- a/README
+++ b/README
@@ -11,4 +11,7 @@ https://en.wikipedia.org/wiki/Marionette
 # neuron
 https://en.wikipedia.org/wiki/Neuron
 
+# myoclonus
+https://en.wikipedia.org/wiki/Myoclonus
+
 bemoeigurus at work
